# Syncer

./: .gitignore  CMakeLists.txt  README.md
include/Syncer/: syncer.h
src/: CMakeLists.txt
src/Syncer/: CMakeLists.txt
src/Syncer/Syncer/: AutoBackup.cpp  AutoBackup.h  Encryption.h  FileFiliter.h  Repository.cpp  Repository.h  RepositoryList.cpp  RepositoryList.h  config.cpp  file.h  packer.cpp  packer.h  syncer.cpp  syncer.h
src/Syncer/Syncer/AutoBackup/: AutoBackup.cpp  AutoBackup.h
src/Syncer/Syncer/Autobackup/: AutoBackup.cpp  AutoBackup.h
src/Syncer/Syncer/Repository/: LocalRepository.h  Repository.cpp  Repository.h  RepositoryList.cpp  RepositoryList.h  config.cpp  config.h
src/Syncer/Syncer/base/: BackupTime.h  DataChunk.cpp  DataChunk.h  HandleWrapper.h  HandlerTable.h  SyncerException.h  file.h  log.cpp  log.h  md5.h  sha1.hpp  uuid.cpp  winapi.h
src/Syncer/Syncer/base/DataChunk/: DataChunk.cpp  DataChunk.h  HandleWrapper.h  file.cpp  file.h
src/Syncer/Syncer/base/glob/: glob.cpp  glob.h
src/Syncer/Syncer/base/log/: log.cpp
src/Syncer/Syncer/base/sha/: md5.cpp
src/Syncer/Syncer/base/uuid/: uuid.cpp  uuid.h
src/Syncer/Syncer/encryption/: encryptor.cpp  encryptor.h  凯撒加密.h  无加密.h
src/Syncer/Syncer/object/: objectfile.cpp  objectfile.h
src/Syncer/Syncer/object1/: objectfile.cpp  objectfile.h
src/Syncer/Syncer/packer/: FileFiliter.h  objectfile.cpp  objectfile.h  packer.cpp  packer.h
src/Test/: CMakeLists.txt  main.cpp  test.cpp
src/protobuf/: CMakeLists.txt
src/protobuf/proto/: Serialize.proto
